--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     canvas{
         border-left: 2px solid gray;
         border-bottom: 2px solid gray;
-        margin: 2rem;
+        box-sizing: border-box;
     }
 </style>
 </html>
